# packages-nlp

./: .gitignore  CMakeLists.txt  Makefile.in  Makefile.mak  config.h.cmake  configure.in  double_metaphone.c  double_metaphone.pl  isub.c  isub.h  isub.pl  nlp.doc  pl-isub.c  porter_stem.c  porter_stem.pl  snowball.c  snowball.pl  test.pl  test_nlp.pl  wcsdup.ic
isub/: ISub.java  README
libstemmer_c/: CMakeLists.txt  Makefile.pl
